add user registration

--- a/corelib/webApp/WebApp/WebApp/Views/Home/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Home/Index.cshtml
@@ -6,6 +6,11 @@
 
 <ul>
     
-    @Html.ActionLink("Logout","Logout","Account")
+    @{
+        if(Request.IsAuthenticated){
+            @Html.ActionLink("Logout","Logout","Account") <br/>
+            @Html.ActionLink("Register Account","Register","Account")
+        }        
+    }
 
 </ul>
