--- a/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
@@ -2,6 +2,10 @@
 
 @{
     ViewBag.Title = "Login";
+
+    var username = ((Request.Cookies["username"] != null) ? Request.Cookies["username"].Value : null);
+    var password = ((Request.Cookies["password"] != null) ? Request.Cookies["password"].Value : null);
+    var rememberMe = ((Request.Cookies["RememberMe"] != null) ? Request.Cookies["RememberMe"].Value : "false");
 }
 
 <h2>Login</h2>
@@ -17,15 +21,19 @@
             @Html.LabelFor(model => model.username)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.username)
+         
+            <input class="text-box single-line" data-val="true" data-val-required="Username Required" id="username" name="username" type="text" value="@username">
+
             @Html.ValidationMessageFor(model => model.username)
+
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.password)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.password)
+          
+            <input class="text-box single-line password" data-val="true" data-val-required="Password Required" id="password" name="password" type="password" value="@password">
             @Html.ValidationMessageFor(model => model.password)
         </div>
 
@@ -33,7 +41,17 @@
             @Html.LabelFor(model => model.RememberMe)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.RememberMe)
+            @{
+                
+                var isChecked = "";
+                if (Convert.ToBoolean(@rememberMe) == true)
+                {
+                    isChecked = "checked";
+                }
+            
+            }
+            <input class="check-box" data-val="true" data-val-required="The Remember Me field is required." id="RememberMe" name="RememberMe" type="checkbox" value="true" @isChecked>
+
             @Html.ValidationMessageFor(model => model.RememberMe)
         </div>
 
@@ -43,11 +61,6 @@
 
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
