add initial design - dashboard

--- a/corelib/webApp/WebApp/WebApp/Content/app.css
+++ b/corelib/webApp/WebApp/WebApp/Content/app.css
@@ -1,7 +1,1 @@
-﻿body {
-    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #666c75;
-    background-color: #fff;
-}
+﻿
