--- a/corelib/webApp/WebApp/WebApp/Views/Home/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Welcome to AMS Company Vehicle</h2>
+﻿
+<h2>Fleet Management Web Application</h2>
 
 <ul>
     
@@ -14,3 +11,11 @@
     }
 
 </ul>
+
+@section scripts{
+    <script>
+        $(window).on('load', function () {
+            
+        })
+    </script>
+}
