--- a/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
@@ -6,61 +6,65 @@
     var username = ((Request.Cookies["username"] != null) ? Request.Cookies["username"].Value : null);
     var password = ((Request.Cookies["password"] != null) ? Request.Cookies["password"].Value : null);
     var rememberMe = ((Request.Cookies["RememberMe"] != null) ? Request.Cookies["RememberMe"].Value : "false");
+
+    Layout = "~/Views/Shared/_loginLayout.cshtml";
 }
 
-<h2>Login</h2>
+<div class="wrapper-page">
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    <div class="text-center">
+        <a href="index.html" class="logo logo-lg"><i class="fa fa-bars"></i> <span>Company Vehicle</span> </a>
+    </div>
 
-    <fieldset>
-        <legend>Users</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.username)
-        </div>
-        <div class="editor-field">
-         
-            <input class="text-box single-line" data-val="true" data-val-required="Username Required" id="username" name="username" type="text" value="@username">
-
-            @Html.ValidationMessageFor(model => model.username)
-
+    <form class="form-horizontal m-t-20" action="/Account/Login?" method="post" novalidate="novalidate">
+        @Html.AntiForgeryToken() @Html.ValidationSummary(true)
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input type="text" data-val="true" data-val-required="Username Required" id="usernameInput" name="username" class="form-control" placeholder="Username" required autofocus value="@username">
+                <i class="md md-account-circle form-control-feedback l-h-34"></i>
+            </div>
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.password)
-        </div>
-        <div class="editor-field">
-          
-            <input class="text-box single-line password" data-val="true" data-val-required="Password Required" id="password" name="password" type="password" value="@password">
-            @Html.ValidationMessageFor(model => model.password)
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input type="password" data-val="true" data-val-required="Password Required" name="password" id="passwordInput" class="form-control" placeholder="Password" required value="@password">
+                <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+            </div>
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.RememberMe)
-        </div>
-        <div class="editor-field">
-            @{
-                
-                var isChecked = "";
-                if (Convert.ToBoolean(@rememberMe) == true)
-                {
-                    isChecked = "checked";
-                }
-            
-            }
-            <input class="check-box" data-val="true" data-val-required="The Remember Me field is required." id="RememberMe" name="RememberMe" type="checkbox" value="true" @isChecked>
-
-            @Html.ValidationMessageFor(model => model.RememberMe)
+        <div class="form-group">
+            <div class="col-xs-12">
+                <div class="checkbox checkbox-primary">
+                    @{ var isChecked = ""; if (Convert.ToBoolean(@rememberMe) == true) { isChecked = "checked"; } }
+                    <input data-val="true" data-val-required="The Remember Me field is required." id="checkbox-signup" name="RememberMe" type="checkbox" value="true" @isChecked>
+                    <label for="checkbox-signup">
+                        Remember me
+                    </label>
+                </div>
+            </div>
         </div>
 
-        <p>
-            <input type="submit" value="Create" />
-        </p>
+        <div class="form-group text-right m-t-20">
+            <div class="col-xs-12">
+                <button class="btn btn-primary btn-custom w-md waves-effect waves-light" type="submit">
+                    Log In
+                </button>
+            </div>
+        </div>
 
-    </fieldset>
-}
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        <div class="form-group m-t-30">
+            <div class="col-sm-7">
+                <a href="pages-recoverpw.html" class="text-muted">
+                    <i class="fa fa-lock m-r-5"></i> Forgot your
+                    password?
+                </a>
+            </div>
+            <div class="col-sm-5 text-right">
+                <a href="pages-register.html" class="text-muted">Create an account</a>
+            </div>
+        </div>
+    </form>
+</div>
+
+<!-- /container -->
+@section Scripts { @Scripts.Render("~/bundles/jqueryval") }
